syntax="proto3";

package file;

option go_package = "/grpc/file;file";

service FileService {
    rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
    rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
};

message UploadFileRequest {
    string name = 1;
    bytes data = 2;
}

message UploadFileResponse {
    string name = 1;
}

message DownloadFileRequest {
    string name = 1;
}

message DownloadFileResponse {
    string name = 1;
    bytes data = 2;
}
